testsuite/tests/properties/invalid_domain/test.out
== with_int/test.lkt ==
test.lkt:5:54: error: Entity collection expected, got Int
5 |     fun get_eq(): Equation = %domain(self.get_var(), 1)
  |                                                      ^


== with_int_array/test.lkt ==
test.lkt:5:54: error: Entity collection expected, got Array[Int]
5 |     fun get_eq(): Equation = %domain(self.get_var(), [1])
  |                                                      ^^^


== with_node/test.lkt ==
test.lkt:6:54: error: Entity collection expected, got Array[FooNode]
6 |     fun get_eq(): Equation = %domain(self.get_var(), node.get_domain())
  |                                                      ^^^^^^^^^^^^^^^^^


lkt_compile: Done
